--- a/templates/visit/index.html.twig
+++ b/templates/visit/index.html.twig
@@ -3,18 +3,9 @@
 {% block title %}Hello VisitController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/ubuntu/workspace/symfony43/src/Controller/VisitController.php'|file_link(0) }}">src/Controller/VisitController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/ubuntu/workspace/symfony43/templates/visit/index.html.twig'|file_link(0) }}">templates/visit/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <main>
+        <section>
+            <h3>page accueil</h3>
+        </section>
+    </main>
 {% endblock %}
