--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
                 <nav>
                     <ul>
                         <li><a href="{{ path('visit') }}">accueil</a></li>
+                        <li><a href="{{ path('blog') }}">blog</a></li>
                         <li><a href="{{ path('app_login') }}">login</a></li>
                         <li><a href="{{ path('app_logout') }}">logout</a></li>
                         <li><a href="{{ path('contenu_index') }}">admin contenu</a></li>
